fix: prevent reset button from submitting form

--- a/webdevelopment/templates/index.html
+++ b/webdevelopment/templates/index.html
@@ -34,7 +34,7 @@
               <div class="button mt-4">
                 <div class="button-dalam">
                   <input type="submit" class="btn btn-primary">
-                  <button class="btn btn-primary reset" id="resetButton">Reset</button>
+                  <button class="btn btn-primary reset" type="reset" id="resetButton">Reset</button>
                 </div>            
                 <p class="mt-2 ms-1">{{t}} s</p> 
               </div>
