--- a/webdevelopment/static/style.css
+++ b/webdevelopment/static/style.css
@@ -8,13 +8,14 @@ body {
 }
 
 .loader {
-  border: 16px solid #f3f3f3;
+  border: 4px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 120px;
-  height: 120px;
+  border-top: 4px solid #3498db;
+  width: 30px;
+  height: 30px;
   -webkit-animation: spin 2s linear infinite; /* Safari */
   animation: spin 2s linear infinite;
+  display: none;
 }
 
 /* Safari */
@@ -91,10 +92,6 @@ textarea {
 .btn-primary:focus {
   outline: none !important;
   box-shadow: none !important;
-}
-
-.hasil {
-  margin-top: -25px;
 }
 
 .reset {
