--- a/webdevelopment/templates/index.html
+++ b/webdevelopment/templates/index.html
@@ -40,8 +40,8 @@
               </div>
               <h5 class="hasil mt-md-0 mt-3" id = "hasil">Hasil: {{p}}</h5>
           </div>
-          <h6 class="col-md-8 mx-auto mt-4">Penjelasan tentang hasil yang didapat:</h6>
-          <h6 class="col-md-8 mx-auto">Negatif</h6>
+          <h5 class="col-md-8 mx-auto mt-4">Penjelasan tentang hasil yang didapat:</h5>
+          <h6 class="col-md-8 mx-auto"><br>Negatif</h6>
           <p class="col-md-8 mx-auto">Disebabkan komentar yang kita masukkan menyalahkan pihak tertentu karena Omicron menyebar
             <br>Contoh : Pulang dari Turki bawa Omicron dasar si 'Kucing Nakal'
           </p>
@@ -58,7 +58,7 @@
           <div>
             <h6 class="col-md-8 mx-auto">Kuisioner</h6>
             <p class="col-md-8 mx-auto">Sebagai feedback dan meningkatkan pengalaman kami untuk mengembangkan sebuah machine learning dan website
-              <a style="background-color : white;" href="https://forms.gle/QL4k8TjubXpgzWv67" >Link Kusioner</a>
+              <a style="color:#fff" href="https://forms.gle/QL4k8TjubXpgzWv67" >Link Kusioner</a>
             </p>
           </div>
             <!-- hasilnya disini -->
