--- a/webdevelopment/templates/index.html
+++ b/webdevelopment/templates/index.html
@@ -56,7 +56,7 @@
           <p class="col-md-8 mx-auto"></p>
           </form>
           <div>
-            <h6 class="col-md-8 mx-auto">Kuisioner</h6>
+            <h6 class="col-md-8 mx-auto">-> Kuisioner</h6>
             <p class="col-md-8 mx-auto">Sebagai feedback dan meningkatkan pengalaman kami untuk mengembangkan sebuah machine learning dan website
               <a style="color:#fff" href="https://forms.gle/QL4k8TjubXpgzWv67" >Link Kusioner</a>
             </p>
