--- a/webdevelopment/templates/index.html
+++ b/webdevelopment/templates/index.html
@@ -65,7 +65,7 @@
           <!-- kontributor -->
           <div class="kontributor col-md-8 mx-auto mt-6">
             <h5 class="">Kontributor:</h5>
-            <div class="row d-flex">
+            <div class="row d-flex justify-content-center">
               <div class="profile biyu d-flex align-items-center">
                 <img src="https://avatars.githubusercontent.com/SulthanAbiyyu" style="height: 60px; border-radius: 50%" alt="profile" />
                 <div class="ms-4 mt-2">
@@ -96,6 +96,14 @@
                   <h6 class="name mt-2">Muhammad Ubaidillah</h5>
                   <p class="position">Bagian UI/UX Design - TIF UB 2021</p>
                   <a href="https://github.com/Devvevan" class="stretched-link"></a>
+                </div>
+              </div>
+              <div class="profile biyu d-flex align-items-center">
+                <img src="https://avatars.githubusercontent.com/u/58034788?v=4" style="height: 60px; border-radius: 50%" alt="profile" />
+                <div class="ms-4 mt-2">
+                  <h6 class="name mt-2">Alfonsus Avianto Chandrawan</h6>
+                  <p class="position">Mentor Frontend - TIF UB 2019</p>
+                  <a href="https://github.com/alfonsus20" target="_blank" class="stretched-link"></a>
                 </div>
               </div>
             </div>
