Bug fix: reset button bug

--- a/webdevelopment/static/style.css
+++ b/webdevelopment/static/style.css
@@ -19,15 +19,22 @@ body {
 
 /* Safari */
 @-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
-
 
 h6,
 p,
@@ -65,7 +72,7 @@ textarea {
 .btn-primary {
   border: none;
   border-radius: 10px;
-  /* width: 120px; */
+  width: 170px;
   margin-right: 5px;
   background: rgb(94, 0, 127);
   background: linear-gradient(309deg, rgba(94, 0, 127, 1) 35%, rgba(22, 23, 143, 1) 100%);
@@ -94,12 +101,12 @@ textarea {
 }
 
 .hasil {
-  margin-top: -25px;
+  /* margin-top: -5000px !important; */
 }
 
 .reset {
   border: none;
-  width: 70px !important;
+  width: 100px !important;
   border-radius: 10px;
   width: 90px;
   margin-right: 5px;
@@ -144,18 +151,42 @@ textarea {
   .position {
     margin-top: -8px;
   }
+  .hasil {
+    margin-top: -80px !important;
+  }
+
+  .hasil-total {
+    margin-top: 55px !important;
+  }
 }
 
 @media screen and (max-width: 576px) {
   .name {
     color: #fff;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: bold;
     margin-top: -20px;
   }
   .position {
     margin-top: -8px;
-    font-size: 12px;
+    font-size: 11px;
+  }
+  .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .hasil {
+    margin-top: 30px !important;
+  }
+  .time {
+    margin-top: 15px !important;
+  }
+  .btn-primary {
+    margin-top: 10px !important;
+  }
+  .time {
+    margin-top: -5px !important;
   }
 }
 
