--- a/webdevelopment/templates/index.html
+++ b/webdevelopment/templates/index.html
@@ -21,24 +21,38 @@
           <p class="col-md-8 mx-auto">
             Omicron Sentiment Analysis Indonesia adalah sebuah proyek yang bertujuan untuk membuat model machine learning yang bisa melakukan klasifikasi teks berdasarkan sentimennya. Proyek ini dibuat semata-mata untuk mempelajari lebih
             dalam tentang proses analisis sentimen hingga deploying dengan platform web. Model kami hanya berhasil memperoleh skor f1 sebesar 70% menggunakan pendekatan LSTM Bidirectional dan tuning dengan Keras Tuner. Kedepannya diharapkan
-            bisa meningkatkan skor f1 menjadi lebih dari 80%.
+            bisa meningkatkan skor f1 menjadi lebih dari 80%. <a style="color:#fff" href="https://github.com/SulthanAbiyyu/Omicron-Sentiment-Analysis-Indonesia">Link Proyek</a>
           </p>
-          <form action="\" method = "POST">
+          
             <!-- text area -->
-            <div class="form-floating mt-4 col-md-8 mx-auto">
-              <input id="floatingTextarea2" name = "input" type="text" class="form-control" placeholder="sentimen" style="height: 90px" >
+            
+            <form action="\" method="POST">
+              <div class="form-floating mt-4 col-md-8 mx-auto">
+              <input id="pendapat" name ="pendapat" type="text" class="form-control" placeholder="pendapat" style="height: 90px" >
               <label for="floatingTextarea2" style="font-size: 13px;font-family: 'Poppins'">Pendapat anda tentang omicron</label>
             </div>
+            <div class="col-md-8 mx-auto d-md-flex justify-content-between align-items-center mt-3">
+              <div class="button">
+
+                <input type="submit" id="submitButton" class="btn btn-primary">
+              </div>
+            </div>
+            </form>
+            
+    
+
             <!-- Button dkk -->
-            <div class="col-md-8 mx-auto d-md-flex justify-content-between align-items-center">
-              <div class="button mt-4">
-                <div class="button-dalam">
-                  <input type="submit" class="btn btn-primary">
+
+          <div class="col-md-8 mx-auto d-md-flex justify-content-between">
+              <div class="button">
+                <div class="button-dalam mt-sm-2">
                   <button class="btn btn-primary reset" id="resetButton">Reset</button>
                 </div>            
-                <p class="mt-2 ms-1">{{t}} s</p> 
               </div>
-              <h5 class="hasil mt-md-0 mt-3" id = "hasil">Hasil: {{p}}</h5>
+              <div class="d-md-flex flex-column mt-sm-5 hasil-total">
+                <h5 class="hasil " id = "hasil">Hasil: {{p}}</h5>
+                <p class="time" id="time">{{t}} s</p> 
+              </div>
           </div>
           <h5 class="col-md-8 mx-auto mt-4">Penjelasan tentang hasil yang didapat:</h5>
           <h6 class="col-md-8 mx-auto"><br>Negatif</h6>
@@ -54,7 +68,7 @@
             <br>Contoh : Walaupun Omicron sudah masuk kita tetap jaga protokol kesehatan!
           </p>
           <p class="col-md-8 mx-auto"></p>
-          </form>
+          <!-- </form> -->
           <div>
             <h6 class="col-md-8 mx-auto">-> Kuisioner</h6>
             <p class="col-md-8 mx-auto">Sebagai feedback dan meningkatkan pengalaman kami untuk mengembangkan sebuah machine learning dan website
@@ -70,7 +84,7 @@
                 <img src="https://avatars.githubusercontent.com/SulthanAbiyyu" style="height: 60px; border-radius: 50%" alt="profile" />
                 <div class="ms-4 mt-2">
                   <h6 class="name mt-2">Sulthan Abiyyu Hakim</h6>
-                  <p class="position">Bagian Machine Learning - TIF UB 2021</p>
+                  <p class="position">Bagian Machine Learning & Frontend - TIF UB 2021</p>
                   <a href="https://github.com/SulthanAbiyyu" target="_blank" class="stretched-link"></a>
                 </div>
               </div>
@@ -86,7 +100,7 @@
                 <img src="https://avatars.githubusercontent.com/adityarizkyramadhan" style="height: 60px; border-radius: 50%" alt="profile" />
                 <div class="ms-4 mt-2">
                   <h6 class="name mt-2">Aditya Rizky Ramadhan</h5>
-                  <p class="position">Bagian Backend - TIF UB 2021</p>
+                  <p class="position">Bagian Backend & Frontend - TIF UB 2021</p>
                   <a href="https://github.com/adityarizkyramadhan" target="_blank" class="stretched-link"></a>
                 </div>
               </div>
@@ -114,9 +128,11 @@
 
     <script>
       const result = document.getElementById("hasil");
+      const time = document.getElementById("time");
       const btnRestart = document.getElementById("resetButton"); 
       btnRestart.addEventListener('click', () => {
           result.innerText = "Hasil: Belum Ada";
+          time.innerText = "0.000 s";
       })
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">    </script>
